--- a/index.html
+++ b/index.html
@@ -1,13 +1,56 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>OMDb API</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <!-- VUE JS CDN (loads all vue functionality) -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
   </head>
   <body>
-    <div class="container text-center">
+    <!-- Vue JS code -->
+    <!-- This div is the entry point of our Vue app. -->
+    <div id="app" class="container text-center">
+      <h3 class="alert alert-danger" v-if="noResponse">{{errorMessage}}</h3>
+      <div class="row g-2 justify-content-center py-5">
+        <div class="col-4">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Find movie"
+            v-model:value="inputText"
+          />
+        </div>
+        <div class="row g-2 justify-content-center py-5">
+          <!-- ... -->
+          <div class="col-1">
+            <input type="submit" class="btn btn-primary" @click="search" />
+          </div>
+        </div>
+        <h2>{{oldIndex}} moved to {{newIndex}}</h2>
+        <!-- shorthand syntax for v-bind -->
+        <ul id="results" ref="results" :class="ulClass">
+          <!-- v-for is used for list rendering -->
+          <li class="list-group-item border-0" v-for="movie in moviesList">
+            <!-- Binding data with attribute -->
+            <img
+              v-bind:src="movie.Poster"
+              width="100"
+              v-bind:alt="movie.Title ? movie.Title : 'movie poster'"
+            />
+            <p>{{movie.Title}}</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Vanila JS code -->
+    <!-- <div class="container text-center">
       <form class="row g-2 justify-content-center py-5" id="search-form">
         <div class="col-4">
           <input type="text" class="form-control" placeholder="Find movie" id="search-input">
@@ -17,8 +60,7 @@
         </div>
       </form>
       <ul id="results" class="list-group list-group-horizontal"></ul>
-    </div>
-
+    </div> -->
     <script src="main.js"></script>
   </body>
 </html>
